--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Azure Functions sample for the Serverless framework",
   "scripts": {
     "test": "echo \"No tests yet...\"",
-    "start": "func host start"
+    "start": "sls offline"
   },
   "keywords": [
     "azure",
     "serverless"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.0"
+  },
   "devDependencies": {
-    "serverless-azure-functions": "^1.0.0-30"
+    "serverless-azure-functions": "^1.0.0"
   }
 }
