--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.3.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "serverless-webpack": "^5.3.1",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3"
   }
 }
