Step 7: Add more advanced API Management configuration

--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,37 @@ provider:
   region: ${opt:region, 'West US'}
   stage: ${opt:stage, 'dev'}
   prefix: ${opt:prefix, 'demo'}
-  apim: true
+  apim:
+    apis:
+      - name: github-api
+        subscriptionRequired: false
+        displayName: Github API
+        description: The GitHub API
+        protocols:
+          - https
+        # Defaults to /api
+        path: github
+        tags:
+          - apimTag1
+          - apimTag2
+        authorization: none
+    backends:
+      - name: github-backend
+        url: api/github
+    cors:
+      allowCredentials: false
+      allowedOrigins:
+        - "*"
+      allowedMethods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - PATCH
+      allowedHeaders:
+        - "*"
+      exposeHeaders:
+        - "*"
 
 plugins:
   - serverless-azure-functions
@@ -20,6 +50,13 @@ package:
 functions:
   issues:
     handler: src/handlers/issues.handler
+    apim:
+      api: github-api
+      backend: github-backend
+      operations:
+        - method: get
+          urlTemplate: /issues
+          displayName: GetIssues
     events:
       - http: true
         x-azure-settings:
@@ -28,6 +65,13 @@ functions:
             - GET
   pulls:
     handler: src/handlers/pulls.handler
+    apim:
+      api: github-api
+      backend: github-backend
+      operations:
+        - method: get
+          urlTemplate: /pulls
+          displayName: GetPullRequests
     events:
       - http: true
         x-azure-settings:
